# aws-mfa

./: Cargo.toml  README.md
mock/: test-config1  test-config1.yml  test-config2  test-config2.yml  test-credentials2
src/: lib.rs  main.rs
src/config/: credentials.rs  mfa.rs  mod.rs
