[package]
name = "aws-mfa"
version = "0.1.0"
edition = "2021"
authors = ["Kanji Tanaka <sumireminami@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["cargo"] }
lazy_static = "1.4"
regex = "1.5"
